# detroit_muscle

./: Cargo.toml  README.md
crates/detroit_muscle/: Cargo.toml
crates/detroit_muscle/src/: lib.rs
crates/detroit_muscle/src/ffi/: compatibility.rs  mod.rs  result.rs  string.rs
